--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,7 +9,7 @@
         <h2>Contact</h2>
 
         <ul>
-            <li>Email：<a href="mailto:{{ site.email }}" target="_top">{{ site.email }}</a></li>
+            <li>Email：<a href="mailto:{{ site.email1 }}" target="_top">{{ site.email1 }}</a>&nbsp;<a href="mailto:{{ site.email2 }}" target="_top">{{ site.email2 }}</a></li>
             <li>Website：<a href="{{ site.github_url }}">{{ site.github_url }}</a></li>
         </ul>
 
