--- a/_includes/about.html
+++ b/_includes/about.html
@@ -10,7 +10,11 @@
 
         <ul>
             <li>Email：<a href="mailto:{{ site.email1 }}" target="_top">{{ site.email1 }}</a>&nbsp;<a href="mailto:{{ site.email2 }}" target="_top">{{ site.email2 }}</a></li>
-            <li>Website：<a href="{{ site.github_url }}">{{ site.github_url }}</a></li>
+            <li>GitHub:<a href="{{ site.github_url }}">{{ site.github_url }}</a></li>
+            <li>CSDN:<a href="{{ site.csdn_page }}">{{ site.csdn_page }}</a></li>
+            <li>掘金:<a href="{{ site.juejin_page }}">{{ site.juejin_page }}</a></li>
+            <li>Telegram:<a href="https://t.me/{{ site.telegram }}">@{{ site.telegram }}</a></li>
+            <li>微博:<a href="{{ site.weibo }}">@{{ site.weibo_name }}</a></li>
         </ul>
 
         <h2>Skill Keywords</h2>
