--- a/_includes/about.html
+++ b/_includes/about.html
@@ -17,7 +17,7 @@
             <li>微博:<a href="{{ site.weibo }}">@{{ site.weibo_name }}</a></li>
         </ul>
 
-        <h2>Skill Keywords</h2>
+        <h2>Skill 技能(至少曾经掌握过 -.-!)</h2>
 
         {% if site.skill_program_language_keywords %}
         <div class="panel panel-default">
@@ -35,7 +35,7 @@
         {% if site.skill_it_keywords %}
         <div class="panel panel-default">
             <div class="panel-heading">
-                <h3 class="panel-title">IT Developer Keywords</h3>
+                <h3 class="panel-title">IT Technology IT技术</h3>
             </div>
             <div class="panel-body">
                 {% for keyword in site.skill_it_keywords %}
