--- a/_includes/about.html
+++ b/_includes/about.html
@@ -4,17 +4,23 @@
 
         <h2>About ME</h2>
 
-        <p>智能卡工程，商用密码产品从业人员，抠腚谋生。红十字志愿者，铁路爱好者，业余无线电爱好者，地理爱好者，持证法律爱好者，证件收藏爱好者。已婚已育。</p>
+        <h3>智能卡工程，商用密码产品从业人员，抠腚谋生。红十字志愿者，铁路爱好者，业余无线电爱好者，地理爱好者，持证法律爱好者，证件收藏爱好者。已婚已育。</h3>
 
         <h2>Contact</h2>
 
         <ul>
             <li>Email：<a href="mailto:{{ site.email1 }}" target="_top">{{ site.email1 }}</a>&nbsp;<a href="mailto:{{ site.email2 }}" target="_top">{{ site.email2 }}</a></li>
+            <p/>
             <li>GitHub:<a href="{{ site.github_url }}">{{ site.github_url }}</a></li>
+            <p/>
             <li>CSDN:<a href="{{ site.csdn_page }}">{{ site.csdn_page }}</a></li>
+            <p/>
             <li>掘金:<a href="{{ site.juejin_page }}">{{ site.juejin_page }}</a></li>
+            <p/>
             <li>Telegram:<a href="https://t.me/{{ site.telegram }}">@{{ site.telegram }}</a></li>
+            <p/>
             <li>微博:<a href="{{ site.weibo }}">@{{ site.weibo_name }}</a></li>
+            <p/>
         </ul>
 
         <h2>Skill 技能(至少曾经掌握过 -.-!)</h2>
