--- a/_includes/about.html
+++ b/_includes/about.html
@@ -11,8 +11,8 @@
         <ul>
             <li>Email：<a href="mailto:{{ site.email1 }}" target="_top">{{ site.email1 }}</a>&nbsp;<a href="mailto:{{ site.email2 }}" target="_top">{{ site.email2 }}</a></li>
             <p/>
-            <li>GitHub:<a href="{{ site.github_url }}">{{ site.github_url }}</a></li>
-            <p/>
+            <!-- li>GitHub:<a href="{{ site.github_url }}">{{ site.github_url }}</a></li>
+            <p/ -->
             <li>CSDN:<a href="{{ site.csdn_page }}">{{ site.csdn_page }}</a></li>
             <p/>
             <li>掘金:<a href="{{ site.juejin_page }}">{{ site.juejin_page }}</a></li>
@@ -54,7 +54,7 @@
         {% if site.skill_cryptography_keywords %}
         <div class="panel panel-default">
             <div class="panel-heading">
-                <h3 class="panel-title">Cryptographic Algorithm 密码算法</h3>
+                <h3 class="panel-title">密码算法 Cryptographic Algorithm</h3>
             </div>
             <div class="panel-body">
                 {% for keyword in site.skill_cryptography_keywords %}
@@ -67,7 +67,7 @@
         {% if site.skill_smart_card_keywords %}
         <div class="panel panel-default">
             <div class="panel-heading">
-                <h3 class="panel-title">Smart Card 智能卡</h3>
+                <h3 class="panel-title">智能卡 Smart Card</h3>
             </div>
             <div class="panel-body">
                 {% for keyword in site.skill_smart_card_keywords %}
@@ -80,7 +80,7 @@
         {% if site.skill_certificate_keywords %}
         <div class="panel panel-default">
             <div class="panel-heading">
-                <h3 class="panel-title">Certificate 资格证书</h3>
+                <h3 class="panel-title">资格证书 Certificate</h3>
             </div>
             <div class="panel-body">
                 {% for keyword in site.skill_certificate_keywords %}
