--- a/_includes/about.html
+++ b/_includes/about.html
@@ -4,7 +4,7 @@
 
         <h2>About ME</h2>
 
-        <h4>智能卡工程师，商用密码产品从业人员，抠腚谋生。红十字志愿者，铁路爱好者，业余无线电爱好者，地理爱好者，持证法律爱好者，证件收藏爱好者。已婚已育。</h4>
+        <h4>智能卡工程师，商用密码产品从业人员，智能网联汽车领域新人，抠腚谋生。红十字志愿者，铁路爱好者，业余无线电爱好者，地理爱好者，持证法律爱好者，证件收藏爱好者。已婚已育。</h4>
 
         <h2>Contact</h2>
 
